# fft-water

./: Cargo.toml
shaders/: butterfly.frag  example.vert  framebuffer-debug.frag  framebuffer-debug.vert  h0k.frag  hkt.frag  inversion.frag  ocean.frag  ocean.vert  quad.vert
src/: camera.rs  debug.rs  fft.rs  main.rs  ocean.rs  shader.rs
