[package]
name = "fft-water"
version = "0.1.0"
authors = ["Joel Nordström <e.joel.nordstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
luminance = "*"
luminance-derive = "*"
nalgebra-glm = "*"
sdl2 = "*"
tiny_ecs = "*"
rand = "*"
